Fix print view alignment issue
Adjusted styles to ensure proper alignment in the print view of the application.
[skip gpt_engineer]

--- a/src/index.css
+++ b/src/index.css
@@ -38,8 +38,14 @@
 
 @media print {
   @page {
-    size: A4;
+    size: A4 portrait;
     margin: 0;
+  }
+  
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
   }
   
   body * {
@@ -52,11 +58,17 @@
   }
   
   #certificate {
-    position: absolute;
-    left: 0;
-    top: 0;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
     width: 210mm;
     height: 297mm;
+    margin: 0;
+    padding: 20mm;
+    box-sizing: border-box;
+    box-shadow: none;
+    border: none;
   }
   
   .no-print {
